zindex fix in blog page, Updates to line height on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,10 +43,6 @@ body {
     overflow-x: hidden;
 }
 
-#chakra-toast-manager-top-left {
-    z-index: 10000 !important;
-}
-
 /**
 * Vertical Timeline overrides
 */
@@ -82,7 +78,7 @@ body {
     * maintain to maintain consistency.
     */
     html {
-        line-height: 1.5;
+        line-height: 1.7;
         -webkit-text-size-adjust: 100%;
         font-family: system-ui, sans-serif;
         -webkit-font-smoothing: antialiased;
